# predictive-maintenance-agent

./: .gitignore  DESIGN.md  README.md  main.py  pyproject.toml  requirements.txt
data/manuals/: efficiency_loss.md  general_inspection.md  hpc_degradation.md
docs/: evaluation_results.json
notebooks/: eda_FD001.ipynb  evaluation.ipynb
src/agent_modules/: anomaly_detector.py  diagnosis_agents.py  knowledge_crew.py  mcp_config.json
src/pipeline/: evaluate_pipeline.py  pipeline.py  test_pipeline.py
src/schemas/: pipeline_state.py  sensor_baselines.json  sensor_config.json
